--- a/ch3/CMakeLists.txt
+++ b/ch3/CMakeLists.txt
@@ -3,8 +3,12 @@ project(chapter3)
 
 set(CMAKE_CXX_FLAGS "-std=c++11")
 
+include_directories( "/usr/local/include/eigen3" )
+
+
 # 加入各子工程
 add_subdirectory(useEigen)
 add_subdirectory(useGeometry)
 add_subdirectory(visualizeGeometry)
 add_subdirectory(examples)
+add_subdirectory(pangolin)
