--- a/ch3/examples/CMakeLists.txt
+++ b/ch3/examples/CMakeLists.txt
@@ -5,3 +5,7 @@ find_package(Pangolin REQUIRED)
 include_directories(${Pangolin_INCLUDE_DIRS})
 add_executable(plotTrajectory plotTrajectory.cpp)
 target_link_libraries(plotTrajectory ${Pangolin_LIBRARIES})
+
+add_library(libDraw SHARED Draw.cpp)
+add_executable(plotCamera plotCamera.cpp)
+target_link_libraries(plotCamera ${Pangolin_LIBRARIES} libDraw)
